GROOVY-5736, GROOVY-7439