@@ -1,5 +1,5 @@
 /*
- * Copyright 2009-2019 the original author or authors.
+ * Copyright 2009-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,9 @@
  */
 package org.eclipse.jdt.groovy.core.tests.xform;
 
+import static org.eclipse.jdt.groovy.core.tests.GroovyBundle.isAtLeastGroovy;
+import static org.junit.Assume.assumeTrue;
+
 import org.eclipse.jdt.groovy.core.tests.basic.GroovyCompilerTestSuite;
 import org.junit.Test;
 
@@ -23,6 +26,8 @@ import org.junit.Test;
  */
 public final class LoggingTests extends GroovyCompilerTestSuite {
 
+    // TODO: Test category and name attributes
+
     @Test
     public void testCommons() {
         //@formatter:off
@@ -30,91 +35,205 @@ public final class LoggingTests extends GroovyCompilerTestSuite {
             "CommonsExample.groovy",
             "import groovy.util.logging.*\n" +
             "@Commons\n" +
-            "class CommonsExample {\n" +
-            "  def meth() {\n" +
+            "class C {\n" +
+            "  void test() {\n" +
             "    log.info('yay!')\n" +
             "  }\n" +
-            "}\n",
+            "}\n" +
+            "new C().test()\n",
         };
         //@formatter:on
 
-        runNegativeTest(sources, "");
+        vmArguments = new String[] {"-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog"};
+        addRuntimeLibrary("commons-logging:commons-logging:1.2");
+        runConformTest(sources, "", "[INFO] C - yay!");
     }
 
     @Test
     public void testLog() {
+        if (Float.parseFloat(System.getProperty("java.specification.version")) > 8)
+            vmArguments = new String[] {"--add-opens", "java.logging/java.util.logging=ALL-UNNAMED"};
+
         //@formatter:off
         String[] sources = {
             "LogExample.groovy",
             "import groovy.util.logging.*\n" +
+            "import java.util.logging.*\n" +
             "@Log\n" +
-            "class LogExample {\n" +
-            //"  static void main(args) {\n" +
-            //"    new LogExample().meth()\n" +
-            //"  }\n" +
-            "  def meth() {\n" +
+            "class C {\n" +
+            "  void test() {\n" +
+            "    log.addHandler(new ConsoleHandler(formatter:{ record -> \"$record.level: $record.message\".toString() }))\n" +
+            "    log.useParentHandlers = false\n" +
             "    log.info('yay!')\n" +
             "  }\n" +
-            "}\n",
+            "}\n" +
+            "new C().test()\n",
         };
         //@formatter:on
 
-        runNegativeTest(sources, ""); // TODO: Test the output produced
+        runConformTest(sources, "", "INFO: yay!");
     }
-
-    // TODO: Test category and name attributes
 
     @Test
     public void testLog4j() {
+        assumeTrue(Boolean.getBoolean("eclipse.pde.launch"));
+
         //@formatter:off
         String[] sources = {
             "Log4jExample.groovy",
+            "import static org.apache.log4j.BasicConfigurator.configure\n" +
             "import groovy.util.logging.*\n" +
             "@Log4j\n" +
-            "class Log4jExample {\n" +
-            "  def meth() {\n" +
+            "class C {\n" +
+            "  void test() {\n" +
             "    log.info('yay!')\n" +
             "  }\n" +
-            "}\n",
+            "}\n" +
+            "configure()\n" +
+            "new C().test()\n",
         };
         //@formatter:on
 
-        runNegativeTest(sources, "");
+        addRuntimeLibrary("log4j:log4j:1.2.17");
+        runConformTest(sources, "0 [Thread-0] INFO C  - yay!");
     }
 
     @Test
     public void testLog4j2() {
+        assumeTrue(Boolean.getBoolean("eclipse.pde.launch"));
+
         //@formatter:off
         String[] sources = {
             "Log4j2Example.groovy",
             "import groovy.util.logging.*\n" +
             "@Log4j2\n" +
-            "class Log4j2Example {\n" +
-            "  def meth() {\n" +
+            "class C {\n" +
+            "  void test() {\n" +
             "    log.info('yay!')\n" +
             "  }\n" +
+            "}\n" +
+            "new C().test()\n",
+
+            "T.groovy",
+            "class T implements org.apache.logging.log4j.core.util.Clock {\n" +
+            "  long currentTimeMillis() { 0 }\n" +
             "}\n",
         };
         //@formatter:on
 
-        runNegativeTest(sources, "");
+        addRuntimeLibrary("org.apache.logging.log4j:log4j-api:2.17.0", "org.apache.logging.log4j:log4j-core:2.17.0");
+        vmArguments = new String[] {"-Dorg.apache.logging.log4j.level=INFO", "-Dlog4j2.clock=T"};
+        runConformTest(sources, "[main] INFO  C - yay!");
     }
 
     @Test
     public void testSlf4j() {
+        assumeTrue(Boolean.getBoolean("eclipse.pde.launch"));
+
         //@formatter:off
         String[] sources = {
             "Slf4jExample.groovy",
             "import groovy.util.logging.*\n" +
             "@Slf4j\n" +
-            "class Slf4jExample {\n" +
-            "  def meth() {\n" +
+            "class C {\n" +
+            "  void test() {\n" +
             "    log.info('yay!')\n" +
             "  }\n" +
+            "}\n" +
+            "new C().test()\n",
+        };
+        //@formatter:on
+
+        addRuntimeLibrary("org.slf4j:slf4j-simple:1.7.32");
+        runConformTest(sources, "", "[Thread-0] INFO C - yay!");
+    }
+
+    @Test
+    public void testSlf4j_5736() {
+        assumeTrue(Boolean.getBoolean("eclipse.pde.launch"));
+
+        //@formatter:off
+        String[] sources = {
+            "Groovy5736.groovy",
+            "import groovy.transform.CompileStatic\n" +
+            "import groovy.util.logging.Slf4j\n" +
+            "@CompileStatic @Slf4j('LOG')\n" +
+            "class C {\n" +
+            "  void test() {\n" +
+            "    LOG.info('yay!')\n" +
+            "  }\n" +
+            "}\n" +
+            "new C().test()\n",
+        };
+        //@formatter:on
+
+        addRuntimeLibrary("org.slf4j:slf4j-simple:1.7.32");
+        runConformTest(sources, "", "[Thread-0] INFO C - yay!");
+    }
+
+    @Test
+    public void testSlf4j_7439() {
+        assumeTrue(Boolean.getBoolean("eclipse.pde.launch") && isAtLeastGroovy(40));
+
+        //@formatter:off
+        String[] sources = {
+            "Groovy7439.groovy",
+            "import groovy.transform.CompileStatic\n" +
+            "import groovy.util.logging.Slf4j\n" +
+            "@CompileStatic @Slf4j('LOG')\n" +
+            "trait T {\n" +
+            "  void test() {\n" +
+            "    LOG.info('yay!')\n" +
+            "  }\n" +
+            "}\n" +
+            "class C implements T {\n" +
+            "}\n" +
+            "new C().test()\n",
+        };
+        //@formatter:on
+
+        addRuntimeLibrary("org.slf4j:slf4j-simple:1.7.32");
+        runConformTest(sources, "", "[Thread-0] INFO T$Trait$Helper - yay!");
+    }
+
+    @Test // GROOVY-5736
+    public void testUnresolved() {
+        //@formatter:off
+        String[] sources = {
+            "Groovy5736.groovy",
+            "@groovy.util.logging.Slf4j()\n" +
+            "class Groovy5736 {\n" +
             "}\n",
         };
         //@formatter:on
 
-        runNegativeTest(sources, "");
+        runNegativeTest(sources,
+            "----------\n" +
+            "1. WARNING in Groovy5736.groovy (at line 1)\n" +
+            "\t@groovy.util.logging.Slf4j()\n" +
+            "\t^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+            "Groovy:Unable to resolve class: org.slf4j.Logger\n" +
+            "----------\n");
+    }
+
+    //--------------------------------------------------------------------------
+
+    private void addRuntimeLibrary(String... spec) {
+        java.util.Map<String, Object> args = new java.util.HashMap<>();
+        args.put("classLoader", new groovy.lang.GroovyClassLoader());
+
+        java.util.Map<String, String>[] deps = java.util.Arrays.stream(spec).map(this::toMap).toArray(java.util.Map[]::new);
+
+        cpAdditions = java.util.Arrays.stream(groovy.grape.Grape.resolve(args, deps)).map(uri -> uri.getPath()).toArray(String[]::new);
+    }
+
+    private java.util.Map<String, String> toMap(String spec) {
+        String[] tokens = spec.split(":");
+
+        java.util.Map<String, String> map = new java.util.HashMap<>();
+        map.put("group", tokens[0]);
+        map.put("module", tokens[1]);
+        map.put("version", tokens[2]);
+        return map;
     }
 }
